Add assembly project